--- a/assets/css/characters.css
+++ b/assets/css/characters.css
@@ -9,7 +9,7 @@
 #fieldGame{
     height: 480px;
     width: 960px;
-    border: 1px solid black;
+    border: 1px solid rgb(200, 200, 200);
 }
 
 .playerSquare, .targetSquare{
