--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -31,7 +31,7 @@ header{
     height: 50px;
     border-radius: 50%;
 
-    background-color: rgb(5, 177, 177);
+    background-image: linear-gradient(to bottom, rgb(5, 177, 177), rgb(119, 199, 199));
     color: white;
 }
 
