--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,15 @@ body{
 main{
     height: 85vh;
 }
+
+@media (max-height: 425px){
+    body{
+        background-color: rgb(255, 245, 201);
+    }
+}
+
+@media (max-width: 425px){
+    body{
+        background-color: rgb(255, 245, 201);
+    }
+}
